Bunch of bugfixes, add info about destillation to book of brewery